[package]
name = "concurrent-kv"
version = "0.2.1"
authors = ["Casey Robinson <casey@rampantmonkey.com>", "Scott Steele"]
description = "key-value data store with limited concurrent updates"
repository = "https://github.com/rampantmonkey/concurrent-kv"
license = "MIT"

[dependencies]
crossbeam = "0.2.9"
